<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:gravity="center"
        android:weightSum="42">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/login_title"
            tools:layout_editor_absoluteY="223dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="20" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="201dp"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="270dp"
            android:layout_weight="2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_margin"
            android:layout_weight="0.8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="8">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@color/colorAccent"
                android:textColor="@color/black"
                android:text="@string/sign_in" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_margin"
            android:layout_weight="0.2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="8">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />


            <TextView
                android:id="@+id/button_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/register"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:clickable="true"
                android:focusable="true"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_margin"
            android:layout_weight="15" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>