...

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <Button
        android:id="@+id/button_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        android:text="@string/sign_out" />

...
