...

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_vertical_margin" />

                <Button
                    android:id="@+id/button_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:backgroundTint="@color/colorAccent"
...
